# axdevice_crates

./: Cargo.toml  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
axdevice_base/: Cargo.toml  all.html  enum.EmuDeviceType.html  fn.map_device_of_type.html  index.html  sidebar-items.js  struct.EmulatedDeviceConfig.html  trait.BaseDeviceOps.html  traitalias.BaseMmioDeviceOps.html  traitalias.BasePortDeviceOps.html  traitalias.BaseSysRegDeviceOps.html
axdevice_base/emu_type/: enum.EmuDeviceType.html
axdevice_base/src/: device_addr.rs  emu_type.rs  lib.rs  test.rs
axdevice_base/src/api/: macro_def.rs  mod.rs
search.desc/axdevice_base/: axdevice_base-desc-0-.js
src/axdevice_base/: emu_type.rs.html  lib.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
vgic/: Cargo.toml
vgic/src/: devops_impl.rs  gic_traits.rs  lib.rs
