[package]
name = "vgic"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git"}
axaddrspace  = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
memory_addr = "0.3.0"
axerrno = "0.1.0"
crate_interface = "0.1.0"